# noten-tools

./: .gitignore  404.html  LICENSE  README-2.md  README.md  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  uninstall.sh  workflow.md
.github/workflows/: docs.yml
anwendung/: index.html
anwendung/aliase/: index.html
anwendung/ausgabe/: index.html
anwendung/booklets/: index.html
anwendung/notensatz/: index.html
anwendung/pdf-reparieren/: index.html
anwendung/scantailor/: index.html
anwendung/stempeln/: index.html
archiv/: index.html
archiv/backup/: index.html
configuration/: index.html
data/: instruments.yaml
development/: index.html
docs/: configuration.md  development.md  index.md  installation.md  noten-ausgabe.md  noten-booklet.md  noten-pdf-fix.md  noten-stempel.md  noten-tools-aliases.md  noten-verarbeitung.md
entwicklung/: index.html
installation/: index.html
loslegen/: index.html
noten-ausgabe/: index.html
noten-booklet/: index.html
noten-pdf-fix/: index.html
noten-stempel/: index.html
noten-tools-aliases/: index.html
noten-verarbeitung/: index.html
notentools/: __init__.py
search/: search_index.json
src/: notenstempel.py  notenverarbeitung.py  pdf-fix.sh  stempel-finalisieren.sh  unbooklet.sh
stylesheets/: catppuccin.css
tests/: conftest.py  test_aliases_sync_regex.py  test_ausgabe_footer.py  test_booklet_ordering.py  test_booklet_split.py  test_instruments_naming.py  test_ocr_color_filter.py  test_ocr_cover_match.py  test_split_filenames.py  test_split_segments.py
(+53 files in other folders)
